add api get users
